--- a/GestionEntreprise/src/main/resources/application.properties
+++ b/GestionEntreprise/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password =
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql=true
